Dados prontos para entrega

--- a/notebooks/exploracao.ipynb
+++ b/notebooks/exploracao.ipynb
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "id": "8adb516b",
    "metadata": {},
    "outputs": [
@@ -395,7 +395,7 @@
        " 'Filial']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "id": "3423266d",
    "metadata": {},
    "outputs": [
@@ -417,7 +417,7 @@
        "5"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "id": "f75e24d4",
    "metadata": {},
    "outputs": [
@@ -443,7 +443,7 @@
        " 'Data da Venda']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "id": "1edc5829",
    "metadata": {},
    "outputs": [
@@ -465,7 +465,7 @@
        "6"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "id": "c2b01929",
    "metadata": {},
    "outputs": [
@@ -491,7 +491,7 @@
        " 'Data da Venda': 'Data da Venda'}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "id": "ec8c9c00",
    "metadata": {},
    "outputs": [
@@ -523,7 +523,7 @@
        " 'Data da Venda': '2023-04-13 18:58:06.794203'}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "id": "6258eb5f",
    "metadata": {},
    "outputs": [
@@ -558,7 +558,7 @@
        " 'Data da Venda': '2023-04-13 18:58:06.794203'}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "id": "ed41fbdc",
    "metadata": {},
    "outputs": [
@@ -579,7 +579,7 @@
        "3123"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 32,
    "id": "5f4153ee",
    "metadata": {},
    "outputs": [
@@ -600,7 +600,7 @@
        "1323"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 33,
    "id": "d88ffd30",
    "metadata": {},
    "outputs": [
@@ -621,7 +621,7 @@
        "4446"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 34,
    "id": "a8e79fcb",
    "metadata": {},
    "outputs": [],
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 35,
    "id": "939612bd",
    "metadata": {},
    "outputs": [
@@ -654,7 +654,7 @@
        "4446"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 36,
    "id": "bcd98f62",
    "metadata": {},
    "outputs": [
@@ -679,7 +679,7 @@
        " 'Filial': 'Filial 7'}"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 37,
    "id": "b6f8c1ba",
    "metadata": {},
    "outputs": [
@@ -704,7 +704,7 @@
        " 'Filial': 'Filial 7'}"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 38,
    "id": "13cff96e",
    "metadata": {},
    "outputs": [
@@ -730,7 +730,7 @@
        " 'Data da Venda': '2022-11-21 18:58:06.794203'}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 39,
    "id": "ffda7f4f",
    "metadata": {},
    "outputs": [
@@ -756,7 +756,7 @@
        " 'Data da Venda': '2022-11-21 18:58:06.794203'}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,8 +767,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 42,
    "id": "d6bcb9df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Nome do Produto',\n",
+       " 'Categoria do Produto',\n",
+       " 'Preço do Produto (R$)',\n",
+       " 'Quantidade em Estoque',\n",
+       " 'Filial']"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nome_colunas = list(combined_list[0].keys())\n",
+    "nome_colunas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "e7ef001c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "dict contains fields not in fieldnames: 'Data da Venda'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[43], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m writer\u001b[38;5;241m.\u001b[39mwriteheader()\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m combined_list:\n\u001b[0;32m----> 8\u001b[0m     \u001b[43mwriter\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwriterow\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/usr/lib/python3.10/csv.py:154\u001b[0m, in \u001b[0;36mDictWriter.writerow\u001b[0;34m(self, rowdict)\u001b[0m\n\u001b[1;32m    153\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mwriterow\u001b[39m(\u001b[38;5;28mself\u001b[39m, rowdict):\n\u001b[0;32m--> 154\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mwriter\u001b[38;5;241m.\u001b[39mwriterow(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_dict_to_list\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrowdict\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "File \u001b[0;32m/usr/lib/python3.10/csv.py:149\u001b[0m, in \u001b[0;36mDictWriter._dict_to_list\u001b[0;34m(self, rowdict)\u001b[0m\n\u001b[1;32m    147\u001b[0m     wrong_fields \u001b[38;5;241m=\u001b[39m rowdict\u001b[38;5;241m.\u001b[39mkeys() \u001b[38;5;241m-\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfieldnames\n\u001b[1;32m    148\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m wrong_fields:\n\u001b[0;32m--> 149\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdict contains fields not in fieldnames: \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    150\u001b[0m                          \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin([\u001b[38;5;28mrepr\u001b[39m(x) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m wrong_fields]))\n\u001b[1;32m    151\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m (rowdict\u001b[38;5;241m.\u001b[39mget(key, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrestval) \u001b[38;5;28;01mfor\u001b[39;00m key \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfieldnames)\n",
+      "\u001b[0;31mValueError\u001b[0m: dict contains fields not in fieldnames: 'Data da Venda'"
+     ]
+    }
+   ],
+   "source": [
+    "path_dados_combinados = '../data_processed/dados_combinados.csv'\n",
+    "\n",
+    "with open(path_dados_combinados, 'w') as file:\n",
+    "    writer = csv.DictWriter(file, fieldnames = nome_colunas)\n",
+    "    writer.writeheader()\n",
+    "\n",
+    "    for row in combined_list:\n",
+    "        writer.writerow(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "d60c7622",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Data da Venda'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[49], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mcombined_list\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mData da Venda\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'Data da Venda'"
+     ]
+    }
+   ],
+   "source": [
+    "combined_list[0]['Data da Venda']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "03cb6bdf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2022-11-21 18:58:06.794203'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined_list[-1]['Data da Venda']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "114b28e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined_list[0].get('Data da Venda')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "802c8573",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2022-11-21 18:58:06.794203'"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined_list[-1].get('Data da Venda')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "0b36881a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Indisponível'"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined_list[0].get('Data da Venda', 'Indisponível')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "7a01be56",
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +934,7 @@
        " 'Data da Venda']"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,19 +946,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "e7ef001c",
+   "execution_count": 56,
+   "id": "a0b2f79b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dados_combinados_tabela = [nome_colunas]\n",
+    "\n",
+    "for row in combined_list:\n",
+    "    linha = []\n",
+    "    for coluna in nome_colunas:\n",
+    "        linha.append(row.get(coluna, 'Indisponível'))\n",
+    "    dados_combinados_tabela.append(linha)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "428bedcb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Sombra de olhos',\n",
+       " 'Eletrônicos',\n",
+       " '41.73',\n",
+       " '5',\n",
+       " 'Filial 6',\n",
+       " '2022-11-21 18:58:06.794203']"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados_combinados_tabela[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "8a2bc5ee",
    "metadata": {},
    "outputs": [],
    "source": [
     "path_dados_combinados = '../data_processed/dados_combinados.csv'\n",
     "\n",
     "with open(path_dados_combinados, 'w') as file:\n",
-    "    writer = csv.DictWriter(file, fieldnames = nome_colunas)\n",
-    "    writer.writeheader()\n",
-    "\n",
-    "    for row in combined_list:\n",
-    "        writer.writerow(row)"
+    "    writer = csv.writer(file)\n",
+    "    writer.writerows(dados_combinados_tabela)"
    ]
   }
  ],
